[1/2] LS Clocks: Let's add a new gradients designs
Change-Id: Ice22ffe12273ad4a15e23cb95926c327606604d4
Signed-off-by: Arghya Chanda <arghyac35@gmail.com>

--- a/core/res/res/values/beast_colors.xml
+++ b/core/res/res/values/beast_colors.xml
@@ -73,4 +73,5 @@
     <!-- Two target preference vertical divider color -->
     <color name="list_divider_dark">#64000000</color>
 
+    <color name="bootleg_accent_gradient_end_color">#00000000</color> 
 </resources>
