--- a/core/res/res/values/beast_symbols.xml
+++ b/core/res/res/values/beast_symbols.xml
@@ -196,4 +196,5 @@
     <!-- On-The-Go -->
     <java-symbol type="drawable" name="ic_lock_onthego" />
 
+  <java-symbol type="color" name="bootleg_accent_gradient_end_color" />
 </resources>
