--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -3439,4 +3439,13 @@
   <!-- For Dual SoftaAp -->
   <java-symbol type="array" name="config_wifi_dual_sap_interfaces" />
   <java-symbol type="bool" name="config_wifi_dual_sap_mode_enabled" />
+
+  <!-- Gradients Shit -->
+  <java-symbol type="color" name="gradient_start_light" />
+  <java-symbol type="color" name="gradient_start_dark" />
+  <java-symbol type="color" name="gradient_end_light" />
+  <java-symbol type="color" name="gradient_end_dark" />
+  <java-symbol type="color" name="gradient_start" />
+  <java-symbol type="color" name="gradient_end" />
+
 </resources>
