--- a/packages/SystemUI/res/values/legion_strings.xml
+++ b/packages/SystemUI/res/values/legion_strings.xml
@@ -146,5 +146,7 @@
 	
     <!-- Button that controls inversion of layout of navigation bar -->
     <string name="nav_bar_layout_inverse">Invert layout</string>
+	
+    <string name="suspend_title_tile">Suspend Action</string>
 
 </resources>
