Fix the QSHeader Accent without header images

--- a/packages/SystemUI/res/layout/qs_panel.xml
+++ b/packages/SystemUI/res/layout/qs_panel.xml
@@ -29,25 +29,22 @@
         android:elevation="4dp"
         android:background="@drawable/qs_background_primary" />
 
-    <!-- Black part behind the status bar -->
-    <View
-        android:id="@+id/quick_settings_status_bar_background"
-        android:layout_width="match_parent"
-        android:layout_height="@*android:dimen/quick_qs_offset_height"
-        android:clipToPadding="false"
-        android:clipChildren="false"
-        android:background="#ff000000" />
-
     <!-- Gradient view behind QS -->
     <View
         android:id="@+id/quick_settings_gradient_view"
         android:layout_width="match_parent"
-        android:layout_height="126dp"
-        android:layout_marginTop="@*android:dimen/quick_qs_offset_height"
+        android:layout_height="166dp"
         android:clipToPadding="false"
         android:clipChildren="false"
-        android:background="@drawable/qs_bg_gradient" />
+	android:background="@drawable/qs_bg_gradient" />
 
+    <!-- Black part behind the status bar -->
+    <LinearLayout
+        android:id="@+id/quick_settings_status_bar_background"
+        android:layout_width="match_parent"
+	android:layout_height="@*android:dimen/quick_qs_offset_height"
+        android:background="@color/quick_settings_status_bar_background_color">
+    </LinearLayout>
 
     <com.android.systemui.qs.QSPanel
         android:id="@+id/quick_settings_panel"
@@ -58,10 +55,10 @@
         android:elevation="4dp"
         android:background="@android:color/transparent"
         android:focusable="true"
-        android:accessibilityTraversalBefore="@id/qs_carrier_text"
-    />
+        android:accessibilityTraversalBefore="@id/qs_carrier_text" />
 
-    <include layout="@layout/quick_status_bar_expanded_header" />
+    <include layout="@layout/quick_status_bar_expanded_header"
+    />
 
     <include layout="@layout/qs_footer_impl" />
 
