--- a/packages/SystemUI/res/layout/quick_qs_status_icons.xml
+++ b/packages/SystemUI/res/layout/quick_qs_status_icons.xml
@@ -44,6 +44,13 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         systemui:textAppearance="@style/TextAppearance.QS.Status"
+        android:paddingEnd="@dimen/signal_cluster_battery_padding" />
+
+    <com.android.systemui.BatteryMeterView
+        android:id="@+id/batteryRemainingIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        systemui:textAppearance="@style/TextAppearance.QS.TileLabel"
         systemui:textSize="@dimen/qs_tile_text_size" />
 
 </LinearLayout>
