--- a/packages/SystemUI/res/values/legion_config.xml
+++ b/packages/SystemUI/res/values/legion_config.xml
@@ -24,4 +24,5 @@
     <integer name="recents_animate_fab_enter_delay">275</integer>
     <!-- The min animation duration for animating the fab out. -->
     <integer name="recents_animate_fab_exit_duration">125</integer>
+    <bool name="config_batteryInQSPanel">false</bool>
 </resources>
