--- a/core/res/res/values/legion_symbols.xml
+++ b/core/res/res/values/legion_symbols.xml
@@ -195,5 +195,14 @@
   
     <!-- On-The-Go -->
     <java-symbol type="drawable" name="ic_lock_onthego" />
+  
+   <!-- Media notification seekbar control -->
+   <java-symbol type="id" name="notification_media_seekbar_container" />
+   <java-symbol type="layout" name="notification_material_media_seekbar" />
+   <java-symbol type="id" name="notification_media_progress" />
+   <java-symbol type="id" name="notification_media_progress_bar" />
+   <java-symbol type="id" name="notification_media_progress_time" />
+   <java-symbol type="id" name="notification_media_elapsed_time" />
+   <java-symbol type="id" name="notification_media_total_time" />
 
 </resources>
