--- a/packages/SystemUI/res/layout/home.xml
+++ b/packages/SystemUI/res/layout/home.xml
@@ -14,7 +14,7 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-s<com.android.systemui.OpaLayout
+<com.android.systemui.OpaLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:systemui="http://schemas.android.com/apk/res-auto"
   android:id="@+id/home"
@@ -89,5 +89,3 @@ s<com.android.systemui.OpaLayout
         systemui:keyCode="3" />
 
 </com.android.systemui.OpaLayout>
-
->>>>>>> f7b5e0e84d8... SystemUI: Add navigation touch animation support
